# Cache-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  WEB_GUI_FIX_SUMMARY.md  stats.txt  test_web_gui.sh
docs/: DEMONSTRATION_GUIDE.md  GUI_USAGE_GUIDE.md  INSTALLATION_GUIDE.md  OUTPUT_MODES_COMPARISON.md  README.md  TESTING_GUIDE.md  TRACE_FILE_GUIDE.md
examples/: README.md
examples/output/: .gitkeep
examples/output/test_outputs/: 8way_test.txt  custom_test.txt  default_test.txt  direct_test.txt  fifo_test.txt  fully_test.txt  nwa_test.txt  perf_test.txt  random_test.txt  trace_test.txt  verbose_test.txt  wb_test.txt
examples/scripts/: replacement_policy_demo.sh  write_demo.sh
examples/traces/: program_trace.txt  sample_trace.txt  web_test.txt  write_demo.txt
gui/: README.md  cache_server.cpp
gui/qt/: README.md  cache_gui.cpp  cache_gui.h  main_gui.cpp
gui/web/: QUICK_START.md  README.md  TROUBLESHOOTING.md  cache_server.cpp  index.html  script.js  style.css
gui/web/interface/: index.html  script.js  style.css  test.html
include/: cache.h  cache_statistics.h  replacement_policy.h  set_associative_cache.h
src/: cache.cpp  cache_statistics.cpp  main.cpp  replacement_policy.cpp  set_associative_cache.cpp
tests/: cache_test.cpp  test_comprehensive.sh
